@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -21,8 +21,8 @@ import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
 import java.time.format.FormatStyle;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
@@ -173,8 +173,7 @@ public class GardenaAccountHandler extends BaseBridgeHandler implements GardenaS
             GardenaConfig gardenaConfig = getThing().getConfiguration().as(GardenaConfig.class);
             logger.debug("{}", gardenaConfig);
 
-            String id = getThing().getUID().getId();
-            gardenaSmart = new GardenaSmartImpl(id, gardenaConfig, this, scheduler, httpClientFactory,
+            gardenaSmart = new GardenaSmartImpl(getThing().getUID(), gardenaConfig, this, scheduler, httpClientFactory,
                     webSocketFactory);
             final GardenaDeviceDiscoveryService discoveryService = this.discoveryService;
             if (discoveryService != null) {
@@ -263,7 +262,7 @@ public class GardenaAccountHandler extends BaseBridgeHandler implements GardenaS
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(GardenaDeviceDiscoveryService.class);
+        return Set.of(GardenaDeviceDiscoveryService.class);
     }
 
     @Override
@@ -280,11 +279,10 @@ public class GardenaAccountHandler extends BaseBridgeHandler implements GardenaS
                 continue;
             }
             final ThingHandler thingHandler = gardenaThing.getHandler();
-            if (!(thingHandler instanceof GardenaThingHandler)) {
+            if (!(thingHandler instanceof GardenaThingHandler gardenaThingHandler)) {
                 logger.debug("Handler for thingUID:{} is not a 'GardenaThingHandler' ({})", thingUID, thingHandler);
                 continue;
             }
-            final GardenaThingHandler gardenaThingHandler = (GardenaThingHandler) thingHandler;
             try {
                 gardenaThingHandler.updateProperties(device);
                 for (Channel channel : gardenaThing.getChannels()) {
