@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -21,7 +21,6 @@ import java.net.InetAddress;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -60,7 +59,7 @@ import com.google.gson.JsonSyntaxException;
 @NonNullByDefault
 public class GreeAirDevice {
     private final Logger logger = LoggerFactory.getLogger(GreeAirDevice.class);
-    private final static Gson gson = new Gson();
+    private static final Gson GSON = new Gson();
     private boolean isBound = false;
     private final InetAddress ipAddress;
     private int port = 0;
@@ -80,7 +79,6 @@ public class GreeAirDevice {
     }
 
     public void getDeviceStatus(DatagramSocket clientSocket) throws GreeException {
-
         if (!isBound) {
             throw new GreeException("Device not bound");
         }
@@ -116,7 +114,7 @@ public class GreeAirDevice {
             reqStatusPackGson.t = GREE_CMDT_STATUS;
             reqStatusPackGson.cols = colArray;
             reqStatusPackGson.mac = getId();
-            String reqStatusPackStr = gson.toJson(reqStatusPackGson);
+            String reqStatusPackStr = GSON.toJson(reqStatusPackGson);
 
             // Encrypt and send the Status Request pack
             String encryptedStatusReqPacket = GreeCryptoUtil.encryptPack(getKey(), reqStatusPackStr);
@@ -135,7 +133,7 @@ public class GreeAirDevice {
             GreeStatusResponseDTO resp = receiveResponse(clientSocket, GreeStatusResponseDTO.class);
             resp.decryptedPack = GreeCryptoUtil.decryptPack(getKey(), resp.pack);
             logger.debug("Response from device: {}", resp.decryptedPack);
-            resp.packJson = gson.fromJson(resp.decryptedPack, GreeStatusResponsePackDTO.class);
+            resp.packJson = GSON.fromJson(resp.decryptedPack, GreeStatusResponsePackDTO.class);
 
             // save the results
             statusResponseGson = Optional.of(resp);
@@ -156,7 +154,7 @@ public class GreeAirDevice {
             bindReqPackGson.mac = getId();
             bindReqPackGson.t = GREE_CMDT_BIND;
             bindReqPackGson.uid = 0;
-            String bindReqPackStr = gson.toJson(bindReqPackGson);
+            String bindReqPackStr = GSON.toJson(bindReqPackGson);
 
             // Encrypt and send the Binding Request pack
             String encryptedBindReqPacket = GreeCryptoUtil.encryptPack(GreeCryptoUtil.getAESGeneralKeyByteArray(),
@@ -167,7 +165,7 @@ public class GreeAirDevice {
             // Recieve a response, create the JSON to hold the response values
             GreeBindResponseDTO resp = receiveResponse(clientSocket, GreeBindResponseDTO.class);
             resp.decryptedPack = GreeCryptoUtil.decryptPack(GreeCryptoUtil.getAESGeneralKeyByteArray(), resp.pack);
-            resp.packJson = gson.fromJson(resp.decryptedPack, GreeBindResponsePackDTO.class);
+            resp.packJson = GSON.fromJson(resp.decryptedPack, GreeBindResponsePackDTO.class);
 
             // Now set the key and flag to indicate the bind was successful
             encKey = resp.packJson.key;
@@ -215,7 +213,7 @@ public class GreeAirDevice {
 
     /**
      * SwingLfRig: controls the swing mode of the horizontal air blades (available on limited number of devices, e.g.
-     * some Cooper & Hunter units - thanks to mvmn)
+     * some Cooper and Hunter units - thanks to mvmn)
      *
      * 0: default
      * 1: full swing
@@ -272,16 +270,16 @@ public class GreeAirDevice {
     }
 
     /**
-     * @param value set temperature in degrees Celsius or Fahrenheit
+     * @param temp set temperature in degrees Celsius or Fahrenheit
      */
     public void setDeviceTempSet(DatagramSocket clientSocket, QuantityType<?> temp) throws GreeException {
         // If commanding Fahrenheit set halfStep to 1 or 0 to tell the A/C which F integer
         // temperature to use as celsius alone is ambigious
         double newVal = temp.doubleValue();
-        int CorF = SIUnits.CELSIUS.equals(temp.getUnit()) ? TEMP_UNIT_CELSIUS : TEMP_UNIT_FAHRENHEIT; // 0=Celsius,
+        int celsiusOrFahrenheit = SIUnits.CELSIUS.equals(temp.getUnit()) ? TEMP_UNIT_CELSIUS : TEMP_UNIT_FAHRENHEIT; // 0=Celsius,
         // 1=Fahrenheit
-        if (((CorF == TEMP_UNIT_CELSIUS) && (newVal < TEMP_MIN_C || newVal > TEMP_MAX_C))
-                || ((CorF == TEMP_UNIT_FAHRENHEIT) && (newVal < TEMP_MIN_F || newVal > TEMP_MAX_F))) {
+        if (((celsiusOrFahrenheit == TEMP_UNIT_CELSIUS) && (newVal < TEMP_MIN_C || newVal > TEMP_MAX_C))
+                || ((celsiusOrFahrenheit == TEMP_UNIT_FAHRENHEIT) && (newVal < TEMP_MIN_F || newVal > TEMP_MAX_F))) {
             throw new IllegalArgumentException("Temp Value out of Range");
         }
 
@@ -302,15 +300,15 @@ public class GreeAirDevice {
         // ******************TempRec TemSet Mapping for setting Fahrenheit****************************
         // subtract the float version - the int version to get the fractional difference
         // if the difference is positive set halfStep to 1, negative to 0
-        if (CorF == TEMP_UNIT_FAHRENHEIT) { // If Fahrenheit,
+        if (celsiusOrFahrenheit == TEMP_UNIT_FAHRENHEIT) { // If Fahrenheit,
             halfStep = newVal - outVal > 0 ? TEMP_HALFSTEP_YES : TEMP_HALFSTEP_NO;
         }
         logger.debug("Converted temp from {}{} to temp={}, halfStep={}, unit={})", newVal, temp.getUnit(), outVal,
-                halfStep, CorF == TEMP_UNIT_CELSIUS ? "C" : "F");
+                halfStep, celsiusOrFahrenheit == TEMP_UNIT_CELSIUS ? "C" : "F");
 
         // Set the values in the HashMap
         HashMap<String, Integer> parameters = new HashMap<>();
-        parameters.put(GREE_PROP_TEMPUNIT, CorF);
+        parameters.put(GREE_PROP_TEMPUNIT, celsiusOrFahrenheit);
         parameters.put(GREE_PROP_SETTEMP, outVal);
         parameters.put(GREE_PROP_TEMPREC, halfStep);
         executeCommand(clientSocket, parameters);
@@ -371,8 +369,7 @@ public class GreeAirDevice {
             int valueArrayposition = colList.indexOf(valueName);
             if (valueArrayposition != -1) {
                 // get the Corresponding value
-                Integer value = valList.get(valueArrayposition);
-                return value;
+                return valList.get(valueArrayposition);
             }
         }
 
@@ -385,7 +382,7 @@ public class GreeAirDevice {
     }
 
     public boolean hasStatusValChanged(String valueName) throws GreeException {
-        if (!prevStatusResponsePackGson.isPresent()) {
+        if (prevStatusResponsePackGson.isEmpty()) {
             return true; // update value if there is no previous one
         }
         // Find the valueName in the Current Status object
@@ -424,7 +421,7 @@ public class GreeAirDevice {
             execCmdPackGson.opt = keyArray;
             execCmdPackGson.p = valueArray;
             execCmdPackGson.t = GREE_CMDT_CMD;
-            String execCmdPackStr = gson.toJson(execCmdPackGson);
+            String execCmdPackStr = GSON.toJson(execCmdPackGson);
 
             // Now encrypt and send the Command Request pack
             String encryptedCommandReqPacket = GreeCryptoUtil.encryptPack(getKey(), execCmdPackStr);
@@ -436,14 +433,14 @@ public class GreeAirDevice {
             execResponseGson.decryptedPack = GreeCryptoUtil.decryptPack(getKey(), execResponseGson.pack);
 
             // Create the JSON to hold the response values
-            execResponseGson.packJson = gson.fromJson(execResponseGson.decryptedPack, GreeExecResponsePackDTO.class);
+            execResponseGson.packJson = GSON.fromJson(execResponseGson.decryptedPack, GreeExecResponsePackDTO.class);
         } catch (IOException | JsonSyntaxException e) {
             throw new GreeException("Exception on command execution", e);
         }
     }
 
     private void setCommandValue(DatagramSocket clientSocket, String command, int value) throws GreeException {
-        executeCommand(clientSocket, Collections.singletonMap(command, value));
+        executeCommand(clientSocket, Map.of(command, value));
     }
 
     private void setCommandValue(DatagramSocket clientSocket, String command, int value, int min, int max)
@@ -451,7 +448,7 @@ public class GreeAirDevice {
         if ((value < min) || (value > max)) {
             throw new GreeException("Command value out of range!");
         }
-        executeCommand(clientSocket, Collections.singletonMap(command, value));
+        executeCommand(clientSocket, Map.of(command, value));
     }
 
     private DatagramPacket createPackRequest(int i, String pack) {
@@ -462,9 +459,8 @@ public class GreeAirDevice {
         request.uid = 0;
         request.tcid = getId();
         request.pack = pack;
-        byte[] sendData = gson.toJson(request).getBytes(StandardCharsets.UTF_8);
-        DatagramPacket sendPacket = new DatagramPacket(sendData, sendData.length, ipAddress, port);
-        return sendPacket;
+        byte[] sendData = GSON.toJson(request).getBytes(StandardCharsets.UTF_8);
+        return new DatagramPacket(sendData, sendData.length, ipAddress, port);
     }
 
     private <T> T receiveResponse(DatagramSocket clientSocket, Class<T> classOfT)
@@ -473,20 +469,20 @@ public class GreeAirDevice {
         DatagramPacket receivePacket = new DatagramPacket(receiveData, receiveData.length);
         clientSocket.receive(receivePacket);
         String json = new String(receivePacket.getData(), StandardCharsets.UTF_8).replace("\\u0000", "").trim();
-        return gson.fromJson(json, classOfT);
+        return GSON.fromJson(json, classOfT);
     }
 
     private void updateTempFtoC() {
         // Status message back from A/C always reports degrees C
         // If using Fahrenheit, us SetTem, TemUn and TemRec to reconstruct the Fahrenheit temperature
         // Get Celsius or Fahrenheit from status message
-        int CorF = getIntStatusVal(GREE_PROP_TEMPUNIT);
+        int celsiusOrFahrenheit = getIntStatusVal(GREE_PROP_TEMPUNIT);
         int newVal = getIntStatusVal(GREE_PROP_SETTEMP);
         int halfStep = getIntStatusVal(GREE_PROP_TEMPREC);
 
-        if ((CorF == -1) || (newVal == -1) || (halfStep == -1)) {
+        if ((celsiusOrFahrenheit == -1) || (newVal == -1) || (halfStep == -1)) {
             throw new IllegalArgumentException("SetTem,TemUn or TemRec is invalid, not performing conversion");
-        } else if (CorF == 1) { // convert SetTem to Fahrenheit
+        } else if (celsiusOrFahrenheit == 1) { // convert SetTem to Fahrenheit
             // Find the valueName in the Returned Status object
             String[] columns = statusResponseGson.get().packJson.cols;
             Integer[] values = statusResponseGson.get().packJson.dat;
