@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,18 +15,20 @@ package org.openhab.binding.netatmo.internal.handler.capability;
 import static org.openhab.binding.netatmo.internal.NetatmoBindingConstants.*;
 
 import java.time.ZonedDateTime;
-import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.binding.netatmo.internal.api.EnergyApi;
 import org.openhab.binding.netatmo.internal.api.NetatmoException;
+import org.openhab.binding.netatmo.internal.api.data.NetatmoConstants.FeatureArea;
 import org.openhab.binding.netatmo.internal.api.data.NetatmoConstants.SetpointMode;
 import org.openhab.binding.netatmo.internal.api.dto.HomeData;
 import org.openhab.binding.netatmo.internal.api.dto.HomeDataModule;
 import org.openhab.binding.netatmo.internal.api.dto.HomeDataRoom;
 import org.openhab.binding.netatmo.internal.api.dto.HomeStatusModule;
+import org.openhab.binding.netatmo.internal.api.dto.NAHomeStatus;
 import org.openhab.binding.netatmo.internal.api.dto.NAHomeStatus.HomeStatus;
 import org.openhab.binding.netatmo.internal.api.dto.Room;
+import org.openhab.binding.netatmo.internal.config.HomeConfiguration;
 import org.openhab.binding.netatmo.internal.deserialization.NAObjectMap;
 import org.openhab.binding.netatmo.internal.handler.CommonInterface;
 import org.openhab.binding.netatmo.internal.providers.NetatmoDescriptionProvider;
@@ -48,6 +50,7 @@ public class EnergyCapability extends RestCapability<EnergyApi> {
 
     private int setPointDefaultDuration = -1;
     private final NetatmoDescriptionProvider descriptionProvider;
+    private String energyId = "";
 
     EnergyCapability(CommonInterface handler, NetatmoDescriptionProvider descriptionProvider) {
         super(handler, EnergyApi.class);
@@ -55,75 +58,54 @@ public class EnergyCapability extends RestCapability<EnergyApi> {
     }
 
     @Override
+    public void initialize() {
+        super.initialize();
+        energyId = handler.getConfiguration().as(HomeConfiguration.class).getIdForArea(FeatureArea.ENERGY);
+    }
+
+    @Override
     protected void updateHomeData(HomeData homeData) {
-        NAObjectMap<HomeDataRoom> rooms = homeData.getRooms();
-        NAObjectMap<HomeDataModule> modules = homeData.getModules();
-        handler.getActiveChildren().forEach(childHandler -> {
-            String childId = childHandler.getId();
-            rooms.getOpt(childId).ifPresentOrElse(roomData -> {
-                roomData.setIgnoredForThingUpdate(true);
-                childHandler.setNewData(roomData);
-            }, () -> {
-                modules.getOpt(childId).ifPresent(childData -> {
-                    childData.setIgnoredForThingUpdate(true);
-                    childHandler.setNewData(childData);
-                });
-                modules.values().stream().filter(module -> childId.equals(module.getBridge()))
-                        .forEach(bridgedModule -> {
-                            childHandler.setNewData(bridgedModule);
+        if (homeData instanceof HomeData.Energy energyData) {
+            NAObjectMap<HomeDataRoom> rooms = energyData.getRooms();
+            NAObjectMap<HomeDataModule> modules = energyData.getModules();
+            handler.getActiveChildren(FeatureArea.ENERGY).forEach(childHandler -> {
+                String childId = childHandler.getId();
+                rooms.getOpt(childId)
+                        .ifPresentOrElse(roomData -> childHandler.setNewData(roomData.ignoringForThingUpdate()), () -> {
+                            modules.getOpt(childId).ifPresent(
+                                    childData -> childHandler.setNewData(childData.ignoringForThingUpdate()));
+                            modules.values().stream().filter(module -> childId.equals(module.getBridge()))
+                                    .forEach(bridgedModule -> childHandler.setNewData(bridgedModule));
                         });
             });
-        });
-        descriptionProvider.setStateOptions(new ChannelUID(thing.getUID(), GROUP_ENERGY, CHANNEL_PLANNING),
-                homeData.getThermSchedules().stream().map(p -> new StateOption(p.getId(), p.getName()))
-                        .collect(Collectors.toList()));
-        setPointDefaultDuration = homeData.getThermSetpointDefaultDuration();
+            descriptionProvider.setStateOptions(new ChannelUID(thing.getUID(), GROUP_ENERGY, CHANNEL_PLANNING),
+                    energyData.getThermSchedules().stream().map(p -> new StateOption(p.getId(), p.getName())).toList());
+            setPointDefaultDuration = energyData.getThermSetpointDefaultDuration();
+        }
     }
 
     @Override
     protected void updateHomeStatus(HomeStatus homeStatus) {
-        NAObjectMap<Room> rooms = homeStatus.getRooms();
-        NAObjectMap<HomeStatusModule> modules = homeStatus.getModules();
-        handler.getActiveChildren().forEach(childHandler -> {
-            String childId = childHandler.getId();
-            rooms.getOpt(childId).ifPresentOrElse(roomData -> childHandler.setNewData(roomData), () -> {
-                modules.getOpt(childId).ifPresentOrElse(childData -> {
-                    childHandler.setNewData(childData);
-                    modules.values().stream().filter(module -> childId.equals(module.getBridge()))
-                            .forEach(bridgedModule -> {
-                                childHandler.setNewData(bridgedModule);
-                            });
-
-                }, () -> {
-                    // This module is not present in the homestatus data, so it is considered as unreachable
-                    HomeStatusModule module = new HomeStatusModule();
-                    module.setReachable(false);
-                    childHandler.setNewData(module);
+        if (homeStatus instanceof NAHomeStatus.Energy energyStatus) {
+            NAObjectMap<Room> rooms = energyStatus.getRooms();
+            NAObjectMap<HomeStatusModule> modules = energyStatus.getModules();
+            handler.getActiveChildren(FeatureArea.ENERGY).forEach(childHandler -> {
+                String childId = childHandler.getId();
+                rooms.getOpt(childId).ifPresentOrElse(roomData -> childHandler.setNewData(roomData), () -> {
+                    modules.getOpt(childId).ifPresent(moduleData -> {
+                        childHandler.setNewData(moduleData);
+                        modules.values().stream().filter(module -> childId.equals(module.getBridge()))
+                                .forEach(bridgedModule -> childHandler.setNewData(bridgedModule));
+                    });
                 });
             });
-        });
+        }
     }
 
-    public int getSetpointDefaultDuration() {
-        return setPointDefaultDuration;
-    }
-
-    public void setRoomThermMode(String roomId, SetpointMode targetMode) {
+    public void setThermPoint(String roomId, SetpointMode mode, long endtime, double temp) {
         getApi().ifPresent(api -> {
             try {
-                api.setThermpoint(handler.getId(), roomId, targetMode,
-                        targetMode == SetpointMode.MAX ? setpointEndTimeFromNow(setPointDefaultDuration) : 0, 0);
-                handler.expireData();
-            } catch (NetatmoException e) {
-                logger.warn("Error setting room thermostat mode '{}' : {}", targetMode, e.getMessage());
-            }
-        });
-    }
-
-    public void setRoomThermTemp(String roomId, double temperature, long endtime, SetpointMode mode) {
-        getApi().ifPresent(api -> {
-            try {
-                api.setThermpoint(handler.getId(), roomId, mode, endtime, temperature);
+                api.setThermpoint(energyId, roomId, mode, endtime, temp);
                 handler.expireData();
             } catch (NetatmoException e) {
                 logger.warn("Error setting room thermostat mode '{}' : {}", mode, e.getMessage());
@@ -131,8 +113,16 @@ public class EnergyCapability extends RestCapability<EnergyApi> {
         });
     }
 
-    public void setRoomThermTemp(String roomId, double temperature) {
-        setRoomThermTemp(roomId, temperature, setpointEndTimeFromNow(setPointDefaultDuration), SetpointMode.MANUAL);
+    public void setRoomThermTemp(String roomId, SetpointMode mode, long endtime, double temp) {
+        setThermPoint(roomId, mode, endtime, temp);
+    }
+
+    public void setRoomThermMode(String roomId, SetpointMode targetMode) {
+        setThermPoint(roomId, targetMode, targetMode == SetpointMode.MAX ? setpointEndTimeFromNow() : 0, 0);
+    }
+
+    public void setRoomThermTemp(String roomId, double temp) {
+        setThermPoint(roomId, SetpointMode.MANUAL, setpointEndTimeFromNow(), temp);
     }
 
     @Override
@@ -141,7 +131,7 @@ public class EnergyCapability extends RestCapability<EnergyApi> {
             try {
                 switch (channelName) {
                     case CHANNEL_PLANNING:
-                        api.switchSchedule(handler.getId(), command.toString());
+                        api.switchSchedule(energyId, command.toString());
                         break;
                     case CHANNEL_SETPOINT_MODE:
                         SetpointMode targetMode = SetpointMode.valueOf(command.toString());
@@ -149,7 +139,7 @@ public class EnergyCapability extends RestCapability<EnergyApi> {
                             logger.info("Switch to 'Manual' is done by setting a setpoint temp, command ignored");
                             return;
                         }
-                        api.setThermMode(handler.getId(), targetMode.apiDescriptor);
+                        api.setThermMode(energyId, targetMode.apiDescriptor);
                         break;
                 }
                 handler.expireData();
@@ -161,7 +151,7 @@ public class EnergyCapability extends RestCapability<EnergyApi> {
         });
     }
 
-    private static long setpointEndTimeFromNow(int duration_min) {
-        return ZonedDateTime.now().plusMinutes(duration_min).toEpochSecond();
+    private long setpointEndTimeFromNow() {
+        return ZonedDateTime.now().plusMinutes(setPointDefaultDuration).toEpochSecond();
     }
 }
