@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -17,8 +17,8 @@ import static org.openhab.binding.netatmo.internal.NetatmoBindingConstants.*;
 import java.util.Collection;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
@@ -63,8 +63,7 @@ public class NetatmoThingTypeProvider implements ThingTypeProvider {
     @Override
     public Collection<ThingType> getThingTypes(@Nullable Locale locale) {
         return ModuleType.AS_SET.stream().filter(mt -> mt != ModuleType.UNKNOWN)
-                .map(mt -> Optional.ofNullable(getThingType(mt.thingTypeUID, locale))).map(Optional::get)
-                .collect(Collectors.toList());
+                .map(mt -> Optional.ofNullable(getThingType(mt.thingTypeUID, locale))).map(Optional::get).toList();
     }
 
     @Override
@@ -77,6 +76,7 @@ public class NetatmoThingTypeProvider implements ThingTypeProvider {
                         .withRepresentationProperty(NAThingConfiguration.ID)
                         .withExtensibleChannelTypeIds(moduleType.getExtensions())
                         .withChannelGroupDefinitions(getGroupDefinitions(moduleType))
+                        .withProperties(Map.of(PROPERTY_THING_TYPE_VERSION, moduleType.thingTypeVersion))
                         .withConfigDescriptionURI(moduleType.getConfigDescription());
 
                 ThingTypeUID bridgeType = moduleType.getBridge().thingTypeUID;
@@ -95,7 +95,7 @@ public class NetatmoThingTypeProvider implements ThingTypeProvider {
 
     private List<ChannelGroupDefinition> getGroupDefinitions(ModuleType thingType) {
         return thingType.getGroupTypes().stream().map(groupType -> new ChannelGroupDefinition(toGroupName(groupType),
-                new ChannelGroupTypeUID(BINDING_ID, groupType))).collect(Collectors.toList());
+                new ChannelGroupTypeUID(BINDING_ID, groupType))).toList();
     }
 
     public static String toGroupName(String groupeTypeName) {
