@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2023 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -18,7 +18,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.PrintStream;
 import java.net.Socket;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledFuture;
@@ -69,7 +69,7 @@ public class PilightConnector implements Runnable, Closeable {
 
     private final ObjectMapper outputMapper = new ObjectMapper(
             new MappingJsonFactory().configure(JsonParser.Feature.AUTO_CLOSE_SOURCE, false))
-                    .setDefaultPropertyInclusion(JsonInclude.Include.NON_NULL);
+            .setDefaultPropertyInclusion(JsonInclude.Include.NON_NULL);
 
     private @Nullable Socket socket;
     private @Nullable PrintStream printStream;
@@ -111,11 +111,11 @@ public class PilightConnector implements Runnable, Closeable {
                                         callback.versionReceived(version);
                                     } else if (line.startsWith("{\"status\":")) {
                                         // currently unused
-                                    } else if (line.equals("1")) {
+                                    } else if ("1".equals(line)) {
                                         throw new IOException("Connection to pilight lost");
                                     } else {
                                         final @Nullable Status status = inputMapper.readValue(line, Status.class);
-                                        callback.statusReceived(Collections.singletonList(status));
+                                        callback.statusReceived(List.of(status));
                                     }
                                 }
 
